--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -96,6 +96,7 @@ foundRec=Found {0} Record
 accountNonExpired=Account Non Expired
 accountNonLocked=Account Non Locked
 credentialsNonExpired=Credentials Non Expired
+description=Description
 
 #audit
 insertByUser=Insert By User
