--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -96,6 +96,7 @@ foundRec=\u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u099b\u09c7 {0} \u09b0\u09c
 accountNonExpired=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
 accountNonLocked=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09ac\u09a8\u09cd\u09a7 \u09a8\u09be
 credentialsNonExpired=\u09aa\u09b0\u09bf\u099a\u09af\u09bc\u09aa\u09a4\u09cd\u09b0 \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
+description=\u09ac\u09bf\u09ac\u09b0\u09a3
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
