--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -78,7 +78,7 @@ make.new.user=Create New User
 create.profile=Create Profile
 login=Login
 logout=Logout
-displayName=Display Name
+fullName=Full Name
 email=Email
 firstName=First Name
 lastName=Last Name
@@ -161,3 +161,16 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+#mmm
+Size.student.firstName=First Name must be between {2} and {1} characters long
+Size.student.lastName=Last Name must be between {2} and {1} characters long
+NotEmpty.student.sex=Please specify your gender
+NotNull.student.dob=Date of birth can not be blank
+Past.student.dob=Date of birth must be in the past
+Email.student.email=Please provide a valid Email address
+NotEmpty.student.email=Email can not be blank
+NotEmpty.student.country=Please select your country
+NotEmpty.student.section=Please select your section
+NotEmpty.student.subjects=Please select at least one subject
+typeMismatch=Invalid format
