--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -78,7 +78,7 @@ make.new.user=\u09a8\u09a4\u09c1\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b
 create.profile=\u09a8\u09a4\u09c1\u09a8 \u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4
 login=\u09b2\u0997\u0987\u09a8
 logout=\u09a4\u09cd\u09af\u09be\u0997 \u0995\u09b0\u09c1\u09a8
-displayName=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0 \u09a8\u09be\u09ae
+fullName=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0 \u09a8\u09be\u09ae
 email=\u0987-\u09ae\u09c7\u0987\u09b2 
 firstName=\u09aa\u09cd\u09b0\u09a5\u09ae \u09a8\u09be\u09ae
 lastName=\u09b6\u09c7\u09b7 \u09a8\u09be\u09ae
