--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -163,6 +163,11 @@ typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 #mmm
+Size=Length must be between {2} and {1} characters long
+
+Size.client.code=Code must be between {2} and {1} characters long
+Size.client.name=Name must be between {2} and {1} characters long
+
 Size.student.firstName=First Name must be between {2} and {1} characters long
 Size.student.lastName=Last Name must be between {2} and {1} characters long
 NotEmpty.student.sex=Please specify your gender
