--- a/src/main/webapp/i18n/messages_hi_IN.properties
+++ b/src/main/webapp/i18n/messages_hi_IN.properties
@@ -1,3 +1,4 @@
+error.not.logged.in=error.not.logged.in
 error.message.deleted.not.found=error.message.deleted.not.found
 error.message.edited.not.found=error.message.edited.not.found
 feedback.message.edited=feedback.message.edited
