--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -5,6 +5,7 @@ error.message.edited.not.found=error.message.edited.not.found
 feedback.message.created=Created
 feedback.message.edited=Edited
 feedback.message.deleted=Deleted
+feedback.message.copied=Copied
 
 welcome.label=Welcome
 
