--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -14,6 +14,7 @@ create.link.label=Create New
 edit.link.label=Edit
 delete.link.label=Erase
 show.link.label=Show
+copy.link.label=Copy
 edit.page.submit.label=Update
 
 create.page.submit.label=Save
