--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,6 +1,7 @@
 error.not.logged.in=error.not.logged.in
 error.message.deleted.not.found=error.message.deleted.not.found
 error.message.edited.not.found=error.message.edited.not.found
+error.message.copied.not.found=error.message.copied.not.found
 
 feedback.message.created=Created
 feedback.message.edited=Edited
@@ -16,10 +17,12 @@ delete.link.label=Erase
 show.link.label=Show
 copy.link.label=Copy
 edit.page.submit.label=Update
+copy.page.submit.label=Copy
 
 create.page.submit.label=Save
 create.page.title=Create
 edit.page.title=Edit
+copy.page.title=Copy
 show.page.title=Show
 list.page.title=List
 label.searchTerm=Find
@@ -56,6 +59,7 @@ footer.capital.oith=OITH
 
 project.title.create=OITH Create
 project.title.edit=OITH Edit
+project.title.copy=OITH Copy
 project.title.index=OITH Index
 project.title.show=OITH Show
 
