--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -92,6 +92,7 @@ username=\u09ac\u09cd\u09af\u09be\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c
 webAddress=\u0997\u0997\u09a8 \u09a0\u09bf\u0995\u09be\u09a8\u09be 
 #new
 enabled=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
+isActive=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
 authorities=\u0995\u09b0\u09cd\u09a4\u09c3\u09a4\u09cd\u09ac
 foundRec=\u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u099b\u09c7 {0} \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
 accountNonExpired=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
