--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,4 +1,4 @@
-error.not.logged.in=error.not.logged.in
+error.message.logged.not.found=error.message.logged.not.found
 error.message.deleted.not.found=error.message.deleted.not.found
 error.message.edited.not.found=error.message.edited.not.found
 error.message.copied.not.found=error.message.copied.not.found
@@ -131,10 +131,10 @@ default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must b
 
 default.paginate.prev=Previous
 default.paginate.next=Next
-default.boolean.true=Yes
-default.boolean.false=Nop
+default.boolean.true=Yeap
+default.boolean.false=Nope
 default.date.format=dd/MM/yyyy
-default.number.format=0
+default.number.format=###,###,###
 
 default.created.message={0} {1} created
 default.updated.message={0} {1} updated
@@ -155,6 +155,7 @@ default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
+default.button.copy.label=Copy
 
 default.button.delete.confirm.message=Are you sure?
 
@@ -171,7 +172,6 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 #mmm
 Size=Length must be between {2} and {1} characters long
-
 Size.client.code=Code must be between {2} and {1} characters long
 Size.client.name=Name must be between {2} and {1} characters long
 
