--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -1,10 +1,12 @@
-error.not.logged.in=error.not.logged.in
-error.message.deleted.not.found=error.message.deleted.not.found
-error.message.edited.not.found=error.message.edited.not.found
+error.message.logged.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b2\u0997 \u09a8\u09be \u0995\u09b0\u09be
+error.message.deleted.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09ae\u09c1\u099b\u09c7 \u09a8\u09be \u09ab\u09c7\u09b2\u09be
+error.message.edited.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4 \u09a8\u09be \u0995\u09b0\u09be
+error.message.copied.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u0995\u09aa\u09bf \u09a8\u09be \u0995\u09b0\u09be
 
 feedback.message.created=\u09a4\u09c8\u09b0\u09bf \u09b9\u09b2
 feedback.message.edited=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4
 feedback.message.deleted=\u09ae\u09c1\u099b\u09c7 \u09ab\u09c7\u09b2\u09be \u09b9\u09df\u09c7\u099b\u09c7
+feedback.message.copied=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 
 welcome.label=\u09b8\u09cd\u09ac\u09be\u0997\u09a4\u09ae
 
@@ -13,11 +15,14 @@ create.link.label=\u09a8\u09a4\u09c1\u09a8 \u09a4\u09c8\u09b0\u09bf \u0995\u09b0
 edit.link.label=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8 \u0995\u09b0\u09be
 delete.link.label=\u09ac\u09be\u09a6 \u09a6\u09bf\u09a8
 show.link.label=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8
+copy.link.label=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 edit.page.submit.label=\u0986\u09aa\u09a1\u09c7\u099f
+copy.page.submit.label=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 
 create.page.submit.label=\u09b8\u0982\u09b0\u0995\u09cd\u09b7\u09a3
 create.page.title=\u09a4\u09c8\u09b0\u09bf \u0995\u09b0\u09c1\u09a8
 edit.page.title=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8
+copy.page.title=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 show.page.title=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8
 list.page.title=\u09a4\u09be\u09b2\u09bf\u0995\u09be
 label.searchTerm=\u0985\u09a8\u09c1\u09b8\u09a8\u09cd\u09a7\u09be\u09a8
@@ -129,7 +134,7 @@ default.paginate.next=Next
 default.boolean.true=\u09b9\u09be\u0981
 default.boolean.false=\u09a8\u09be
 default.date.format=dd/MM/yyyy
-default.number.format=0
+default.number.format=##,##,##,###
 
 default.created.message={0} {1} created
 default.updated.message={0} {1} updated
@@ -138,18 +143,19 @@ default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 
-default.home.label=Home
-default.list.label={0} List
-default.add.label=Add {0}
-default.new.label=New {0}
-default.create.label=Create {0}
-default.show.label=Show {0}
-default.edit.label=Edit {0}
+default.home.label=\u09ac\u09be\u09a1\u09bc\u09bf
+default.list.label={0} \u09a4\u09be\u09b2\u09bf\u0995\u09be
+default.add.label=\u09b8\u0982\u09af\u09c7\u09be\u099c\u09bf\u09a4 {0}
+default.new.label=\u09a8\u09a4\u09c1\u09a8 {0}
+default.create.label=\u09a4\u09c8\u09b0\u09bf \u09b9\u09b2 {0}
+default.show.label=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8 {0}
+default.edit.label=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4 {0}
 
-default.button.create.label=Create
-default.button.edit.label=Edit
-default.button.update.label=Update
-default.button.delete.label=Delete
+default.button.create.label=\u09a8\u09a4\u09c1\u09a8 \u09a4\u09c8\u09b0\u09bf \u0995\u09b0\u09c1\u09a8
+default.button.edit.label=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8 \u0995\u09b0\u09be
+default.button.update.label=\u0986\u09aa\u09a1\u09c7\u099f
+default.button.delete.label=\u09ae\u09c1\u099b\u09c7 \u09ab\u09c7\u09b2\u09be
+default.button.copy.label=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 
 default.button.delete.confirm.message=\u0986\u09aa\u09a8\u09bf \u0995\u09bf \u09a8\u09bf\u09b6\u09cd\u099a\u09bf\u09a4? 
 
