--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,3 +1,7 @@
+label.gender.MALE=Male
+label.gender.FEMALE=Female
+label.gender.OTHER=Other
+
 error.message.logged.not.found=error.message.logged.not.found
 error.message.deleted.not.found=error.message.deleted.not.found
 error.message.edited.not.found=error.message.edited.not.found
