--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -2,10 +2,10 @@ label.gender.MALE=Male
 label.gender.FEMALE=Female
 label.gender.OTHER=Other
 
-error.message.logged.not.found=error.message.logged.not.found
-error.message.deleted.not.found=error.message.deleted.not.found
-error.message.edited.not.found=error.message.edited.not.found
-error.message.copied.not.found=error.message.copied.not.found
+error.message.not.found.logged=error.message.not.found.logged
+error.message.not.found.deleted=error.message.not.found.deleted
+error.message.not.found.edited=error.message.not.found.edited
+error.message.not.found.copied=error.message.not.found.copied
 
 feedback.message.created=Created
 feedback.message.edited=Edited
