--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -2,10 +2,10 @@ label.gender.MALE=\u09aa\u09c1\u09b0\u09c1\u09b7
 label.gender.FEMALE=\u09ae\u09b9\u09bf\u09b2\u09be
 label.gender.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
 
-error.message.logged.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b2\u0997 \u09a8\u09be \u0995\u09b0\u09be
-error.message.deleted.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09ae\u09c1\u099b\u09c7 \u09a8\u09be \u09ab\u09c7\u09b2\u09be
-error.message.edited.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4 \u09a8\u09be \u0995\u09b0\u09be
-error.message.copied.not.found=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u0995\u09aa\u09bf \u09a8\u09be \u0995\u09b0\u09be
+error.message.not.found.logged=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b2\u0997 \u09a8\u09be \u0995\u09b0\u09be
+error.message.not.found.deleted=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09ae\u09c1\u099b\u09c7 \u09a8\u09be \u09ab\u09c7\u09b2\u09be
+error.message.not.found.edited=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4 \u09a8\u09be \u0995\u09b0\u09be
+error.message.not.found.copied=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u0995\u09aa\u09bf \u09a8\u09be \u0995\u09b0\u09be
 
 feedback.message.created=\u09a4\u09c8\u09b0\u09bf \u09b9\u09b2
 feedback.message.edited=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4
