--- a/src/main/webapp/i18n/messages_hi_IN.properties
+++ b/src/main/webapp/i18n/messages_hi_IN.properties
@@ -1,6 +1,6 @@
-error.message.logged.not.found=error.message.logged.not.found
-error.message.deleted.not.found=error.message.deleted.not.found
-error.message.edited.not.found=error.message.edited.not.found
+error.message.not.found.logged=error.message.not.found.logged
+error.message.not.found.deleted=error.message.not.found.deleted
+error.message.not.found.edited=error.message.not.found.edited
 feedback.message.edited=feedback.message.edited
 feedback.message.created=feedback.message.created
 
