--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -2,6 +2,29 @@ label.gender.MALE=Male
 label.gender.FEMALE=Female
 label.gender.OTHER=Other
 
+label.bloodGroup.A_POS=A+ 
+label.bloodGroup.A_NEG=A-
+label.bloodGroup.B_POS=B+ 
+label.bloodGroup.B_NEG=B-
+label.bloodGroup.AB_POS=AB+
+label.bloodGroup.AB_NEG=AB-
+label.bloodGroup.O_POS=O+ 
+label.bloodGroup.O_NEG=O-
+
+label.maritalSts.SINGLE=Single
+label.maritalSts.MARRIED=Married
+label.maritalSts.SEPARATED=Separated
+label.maritalSts.DIVORCED=Divorced
+label.maritalSts.WIDOWED=Widowed
+
+label.religion.ISLAM=Islam 
+label.religion.HINDUISM=Hinduism 
+label.religion.BUDDHISM=Buddhism
+label.religion.CHRISTIANITY=Christianity 
+label.religion.JUDAISM=Judaism 
+label.religion.SIKHISM=Sikhism 
+label.religion.OTHER=Other
+
 error.message.not.found.logged=error.message.not.found.logged
 error.message.not.found.deleted=error.message.not.found.deleted
 error.message.not.found.edited=error.message.not.found.edited
@@ -38,6 +61,8 @@ list.page.label.no.data.found=No data found
 home=House
 show.boolean.true=Yeap
 show.boolean.false=Nope
+create.profile=Create Profile
+show.profile=Show Profile
 
 list_first=First Page
 list_next=Next Page
@@ -71,50 +96,148 @@ project.title=OITH Framework
 project.homepage.title=Home
 project.welcome.message=Welcome OITH Framework 2.8.7, if you see this page, you are just okay.
 
-#for bangla
-audit=Audit
-gender=Gender
-dob=Date of Born
-profile=Profile
-name=Name
-code=Code
-title=Title
-remarks=Remarks
-sal=Salary
-emp=Employee 
-active=Active ?
-slNo=Serial No 
-show.profile=Show Profile
-make.new.user=Create New User
-create.profile=Create Profile
-login=Login
-logout=Logout
-fullName=Full Name
-email=Email
-firstName=First Name
-lastName=Last Name
-middleName=Middle Name
-mobile=Mobile 
-nickName=Nick Name
-phone=Phone 
-profilePicFile=Photo
-username=User Name
-webAddress=Web Address
-#new
-enabled=Enabled
-authorities=Authorities
-foundRec=Found {0} Record
+accountNo=Account No
 accountNonExpired=Account Non Expired
 accountNonLocked=Account Non Locked
+action=Action
+active=Active ?
+address=Address
+addressType=Address Type
+amountCr=Amount Cr
+amountDr=Amount Dr
+approvedBy=Approved By
+audit=Audit
+auditor=Auditor
+authorities=Authorities
+bank=Bank
+bloodGroup=Blood Group
+businessArea=Business Area
+careOf=Care Of
+checkedBy=Checked By
+chequeDate=Cheque Date
+chequeNo=Cheque No
+chestSize=Chest Size
+city=City
+className=Class Name
+client=Client
+cmd=Cmd
+coa=Chart of Account
+coaOpposite=Chart of Account Opposite
+code=Code
+company=Company
+companyCode=Company Code
+contactInfo=Contact Info
+contactPersonPrimary=Contact Person Primary
+contactPersonSecondary=Contact Person Secondary
+content=Content
+controller=Controller
+costCenter=Cost Center
+country=Country
 credentialsNonExpired=Credentials Non Expired
+currency=Currency
+defaultVal=Default Value
+desc=Description
 description=Description
+designation=Designation
+divisions=Divisions
+dob=Date of Born
+doe=Date of Expire
+doj=Date of Join
+edu=Education
+elementPole=Element Pole
+email=Email
+embdId=Embd Id
+emp=Employee 
+empGroup=Employee Group
+empRequired=Employee Required
+empSubgroup=Employee Subgroup
+enabled=Enabled
+endDate=End Date
+envs=Envs
+favorites=Favorites
+fieldAttribute=Field Attribute
+firstName=First Name
+fullName=Full Name
+gender=Gender
+grade=Grade
+height=Height
+helpText=Help Text
+holding=Holding
+id=ID
+interval=Interval
+isActive=Is Active
+isMandatory=Is Mandatory
+language=Language
+lastName=Last Name
+login=Login
+logout=Logout
+make.new.user=Create New User
+maritalSts=Marital Status
+marriageDate=Marriage Date
+menuType=Menu Type
+middleName=Middle Name
+mobile=Mobile
+name=Name
+nameAlias=Name Alias
+nameSecondary=Name Secondary
+narration=Narration
+nickName=Nick Name
+nid=NID
+noOfChild=No of Child
+notifiedTo=Notified To
+org=Org
+orgUnitType=Org Unit Type
+originatedBy=Originated By
+paramName=Param Name
+paramType=Param Type
+params=Params
+passingYear=Passing Year
+password=Password
+payrollArea=Payroll Area
+pct=Pct
+personnelArea=Personnel Area
+personnelSubarea=Personnel Subarea
+phone=Phone
+poBox=PO Box
+poCode=PO Code
+position=Position
+profile=Profile
+profileEduDtls=Profile Edu Dtls
+profileJobDtls=Profile Job Dtls
+profilePicFile=Photo
+property=Property
+recommendBy=Recommend By
+religion=Religion
+remarks=Remarks
+root=Root
+rootHead=Root Head
+sal=Salary
+salesGroup=Sales Group
+salesOffice=Sales Office
+slNo=Serial No 
+startDate=Start Date
+state=State
+street=Street
+submitDate=Submit Date
+submittedBy=Submitted By
+text=Text
+title=Title
+user=User
+username=User Name
+value=Value
+valueType=Value Type
+web=Web
+webAddress=Web Address
+weight=Weight
+zip=Zip
 
 #audit
 insertByUser=Insert By User
 insertDate=Insert Date
 updateByUser=Update By User
 updateDate=Update Date 
-#####################################from
+
+default.foundRec=Found {0} Record
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
