--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -2,6 +2,29 @@ label.gender.MALE=\u09aa\u09c1\u09b0\u09c1\u09b7
 label.gender.FEMALE=\u09ae\u09b9\u09bf\u09b2\u09be
 label.gender.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
 
+label.bloodGroup.A_POS=\u098f+
+label.bloodGroup.A_NEG=\u098f-
+label.bloodGroup.B_POS=\u09ac\u09bf+ 
+label.bloodGroup.B_NEG=\u09ac\u09bf-
+label.bloodGroup.AB_POS=\u098f\u09ac\u09bf+
+label.bloodGroup.AB_NEG=\u098f\u09ac\u09bf-
+label.bloodGroup.O_POS=\u0993+ 
+label.bloodGroup.O_NEG=\u0993-
+
+label.maritalSts.SINGLE=\u0985\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
+label.maritalSts.MARRIED=\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
+label.maritalSts.SEPARATED=\u09ac\u09bf\u099b\u09bf\u09a8\u09cd\u09a8
+label.maritalSts.DIVORCED=\u09a4\u09be\u09b2\u09be\u0995\u09aa\u09cd\u09b0\u09be\u09aa\u09cd\u09a4
+label.maritalSts.WIDOWED=\u09ac\u09bf\u09a7\u09ac\u09be/\u09ac\u09bf\u09aa\u09a4\u09cd\u09a8\u09c0\u0995
+
+label.religion.ISLAM=\u0987\u09b8\u09b2\u09be\u09ae
+label.religion.HINDUISM=\u09b9\u09bf\u09a8\u09cd\u09a6\u09c1\u09a7\u09b0\u09cd\u09ae
+label.religion.BUDDHISM=\u09ac\u09cc\u09a6\u09cd\u09a7\u09a7\u09b0\u09cd\u09ae
+label.religion.CHRISTIANITY=\u0996\u09cd\u09b0\u09c0\u09b7\u09cd\u099f\u09a7\u09b0\u09cd\u09ae
+label.religion.JUDAISM=\u0987\u09b9\u09c1\u09a6\u09c0
+label.religion.SIKHISM=\u09b6\u09bf\u0996 
+label.religion.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
+
 error.message.not.found.logged=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b2\u0997 \u09a8\u09be \u0995\u09b0\u09be
 error.message.not.found.deleted=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09ae\u09c1\u099b\u09c7 \u09a8\u09be \u09ab\u09c7\u09b2\u09be
 error.message.not.found.edited=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09bf\u09a4 \u09a8\u09be \u0995\u09b0\u09be
@@ -38,6 +61,8 @@ list.page.label.no.data.found=\u0995\u09cb\u09a8 \u09a4\u09a5\u09cd\u09af \u09aa
 home=\u09ac\u09be\u09a1\u09bc\u09bf
 show.boolean.true=\u09b9\u09be\u0981
 show.boolean.false=\u09a8\u09be
+create.profile=\u09a8\u09a4\u09c1\u09a8 \u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4
+show.profile=\u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4 \u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8
 
 list_first=First Page
 list_next=Next Page
@@ -63,6 +88,7 @@ footer.capital.oith=\u0985\u0987\u09a5
 
 project.title.create=\u0985\u0987\u09a5 \u09b8\u09c3\u09b7\u09cd\u099f\u09bf
 project.title.edit=\u0985\u0987\u09a5 \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8\u09be
+project.title.copy=\u0985\u0987\u09a5 Copy
 project.title.index=\u0985\u0987\u09a5 \u09b8\u09c2\u099a\u09a8\u09be
 project.title.show=\u0985\u0987\u09a5 \u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0
 
@@ -70,51 +96,148 @@ project.title=\u0985\u0987\u09a5 \u0995\u09be\u09a0\u09be\u09ae
 project.homepage.title=\u09ac\u09be\u09a1\u09bc\u09bf
 project.welcome.message=\u09b8\u09cd\u09ac\u09be\u0997\u09a4\u09ae \u0995\u09be\u09a0\u09be\u09ae\u09cb \u0985\u0987\u09a5 \u09e8\u0964\u09ee\u0964\u09ed \u09af\u09a6\u09bf \u0986\u09aa\u09a8\u09bf \u098f\u0987 \u09aa\u09c3\u09b7\u09cd\u09a0\u09be\u09b0 \u09a6\u09c7\u0996\u09a4\u09c7 \u09aa\u09be\u09b0\u09c7\u09a8, \u0995\u09be\u09a0\u09be\u09ae\u09cb \u0995\u09be\u099c \u0995\u09b0\u099b\u09c7\u0964
 
-#for bangla
-audit=\u09a8\u09bf\u09b0\u09c0\u0995\u09cd\u09b7\u09be
-gender=\u09b2\u09bf\u0999\u09cd\u0997
-dob=\u099c\u09a8\u09cd\u09ae \u09a4\u09be\u09b0\u09bf\u0996
-profile=\u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4
-name=\u09a8\u09be\u09ae
-code=\u0995\u09cb\u09a1
-title=\u09b6\u09bf\u09b0\u09cb\u09a8\u09be\u09ae
-remarks=\u09ae\u09a8\u09cd\u09a4\u09ac\u09cd\u09af
-sal=\u09ac\u09c7\u09a4\u09a8
-emp=\u0995\u09b0\u09cd\u09ae\u099a\u09be\u09b0\u09c0 
-active=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc?
-slNo=\u09b8\u09bf\u09b0\u09bf\u09df\u09be\u09b2 \u09a8\u0982 
-show.profile=\u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4 \u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8
-make.new.user=\u09a8\u09a4\u09c1\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
-create.profile=\u09a8\u09a4\u09c1\u09a8 \u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4
-login=\u09b2\u0997\u0987\u09a8
-logout=\u09a4\u09cd\u09af\u09be\u0997 \u0995\u09b0\u09c1\u09a8
-fullName=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0 \u09a8\u09be\u09ae
-email=\u0987-\u09ae\u09c7\u0987\u09b2 
-firstName=\u09aa\u09cd\u09b0\u09a5\u09ae \u09a8\u09be\u09ae
-lastName=\u09b6\u09c7\u09b7 \u09a8\u09be\u09ae
-middleName=\u09ae\u09a7\u09cd\u09af\u09ae \u09a8\u09be\u09ae
-mobile=\u09ae\u09cb\u09ac\u09be\u0987\u09b2 
-nickName=\u09a1\u09be\u0995 \u09a8\u09be\u09ae
-phone=\u09a6\u09c1\u09b0\u09be\u09b2\u09be\u09aa\u09a8\u09c0 
-profilePicFile=\u099b\u09ac\u09bf
-username=\u09ac\u09cd\u09af\u09be\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
-webAddress=\u0997\u0997\u09a8 \u09a0\u09bf\u0995\u09be\u09a8\u09be 
-#new
-enabled=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
-isActive=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
-authorities=\u0995\u09b0\u09cd\u09a4\u09c3\u09a4\u09cd\u09ac
-foundRec=\u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u099b\u09c7 {0} \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
+accountNo=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09a8\u09ae\u09cd\u09ac\u09b0
 accountNonExpired=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
 accountNonLocked=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u09ac\u09a8\u09cd\u09a7 \u09a8\u09be
+action=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc\u09a8
+active=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc?
+address=\u09a0\u09bf\u0995\u09be\u09a8\u09be
+addressType=\u09a0\u09bf\u0995\u09be\u09a8\u09be Type
+amountCr=Amount Cr
+amountDr=Amount Dr
+approvedBy=\u0985\u09a8\u09c1\u09ae\u09cb\u09a6\u09a8 \u0995\u09b0\u09c7\u099b\u09c7\u09a8
+audit=\u09a8\u09bf\u09b0\u09c0\u0995\u09cd\u09b7\u09be
+auditor=\u09a8\u09bf\u09b0\u09c0\u0995\u09cd\u09b7\u0995
+authorities=\u0995\u09b0\u09cd\u09a4\u09c3\u09a4\u09cd\u09ac
+bank=\u09ac\u09cd\u09af\u09be\u0982\u0995
+bloodGroup=\u09b0\u0995\u09cd\u09a4\u09c7\u09b0 \u0997\u09cd\u09b0\u09c1\u09aa
+businessArea=Business Area
+careOf=Care Of
+checkedBy=Checked By
+chequeDate=Cheque Date
+chequeNo=Cheque No
+chestSize=\u09ac\u09c1\u0995\u09c7\u09b0 \u0986\u0995\u09be\u09b0
+city=\u09b6\u09b9\u09b0
+className=Class Name
+client=\u0996\u09b0\u09bf\u09a6\u09cd\u09a6\u09be\u09b0
+cmd=Cmd
+coa=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u099a\u09be\u09b0\u09cd\u099f
+coaOpposite=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u099a\u09be\u09b0\u09cd\u099f Opposite
+code=\u0995\u09cb\u09a1
+company=\u0995\u09cb\u09ae\u09cd\u09aa\u09be\u09a8\u09bf
+companyCode=\u0995\u09cb\u09ae\u09cd\u09aa\u09be\u09a8\u09bf Code
+contactInfo=\u09af\u09cb\u0997\u09be\u09af\u09cb\u0997\u09c7\u09b0 \u09a4\u09a5\u09cd\u09af
+contactPersonPrimary=\u09ac\u09cd\u09af\u0995\u09cd\u09a4\u09bf \u09af\u09cb\u0997\u09be\u09af\u09cb\u0997 \u09aa\u09cd\u09b0\u09be\u09a5\u09ae\u09bf\u0995
+contactPersonSecondary=\u09ac\u09cd\u09af\u0995\u09cd\u09a4\u09bf \u09af\u09cb\u0997\u09be\u09af\u09cb\u0997 \u0986\u09a8\u09c1\u09b7\u0999\u09cd\u0997\u09bf\u0995
+content=Content
+controller=Controller
+costCenter=Cost Center
+country=\u09a6\u09c7\u09b6
 credentialsNonExpired=\u09aa\u09b0\u09bf\u099a\u09af\u09bc\u09aa\u09a4\u09cd\u09b0 \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
+currency=Currency
+defaultVal=Default Value
+desc=\u09ac\u09bf\u09ac\u09b0\u09a3
 description=\u09ac\u09bf\u09ac\u09b0\u09a3
+designation=\u0989\u09aa\u09be\u09a7\u09bf
+divisions=Divisions
+dob=\u099c\u09a8\u09cd\u09ae \u09a4\u09be\u09b0\u09bf\u0996
+doe=Date of Expire
+doj=Date of Join
+edu=\u09b6\u09bf\u0995\u09cd\u09b7\u09be
+elementPole=Element Pole
+email=\u0987-\u09ae\u09c7\u0987\u09b2 
+embdId=Embd Id
+emp=\u0995\u09b0\u09cd\u09ae\u099a\u09be\u09b0\u09c0
+empGroup=\u0995\u09b0\u09cd\u09ae\u099a\u09be\u09b0\u09c0 \u0997\u09cd\u09b0\u09c1\u09aa
+empRequired=Employee Required
+empSubgroup=Employee Subgroup
+enabled=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
+endDate=\u09b6\u09c7\u09b7 \u09a4\u09be\u09b0\u09bf\u0996
+envs=Envs
+favorites=\u09aa\u099b\u09a8\u09cd\u09a6\u09b8\u0987
+fieldAttribute=Field Attribute
+firstName=\u09aa\u09cd\u09b0\u09a5\u09ae \u09a8\u09be\u09ae
+fullName=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0 \u09a8\u09be\u09ae
+gender=\u09b2\u09bf\u0999\u09cd\u0997
+grade=Grade
+height=\u0989\u099a\u09cd\u099a\u09a4\u09be
+helpText=Help Text
+holding=Holding
+id=ID
+interval=Interval
+isActive=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
+isMandatory=Is Mandatory
+language=\u09ad\u09be\u09b7\u09be
+lastName=\u09b6\u09c7\u09b7 \u09a8\u09be\u09ae
+login=\u09b2\u0997\u0987\u09a8
+logout=\u09a4\u09cd\u09af\u09be\u0997 \u0995\u09b0\u09c1\u09a8
+make.new.user=\u09a8\u09a4\u09c1\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
+maritalSts=\u09ac\u09c8\u09ac\u09be\u09b9\u09bf\u0995 \u0985\u09ac\u09b8\u09cd\u09a5\u09be
+marriageDate=\u09ac\u09bf\u09ac\u09be\u09b9 \u09a4\u09be\u09b0\u09bf\u0996
+menuType=Menu Type
+middleName=\u09ae\u09a7\u09cd\u09af\u09ae \u09a8\u09be\u09ae
+mobile=\u09ae\u09cb\u09ac\u09be\u0987\u09b2 
+name=\u09a8\u09be\u09ae
+nameAlias=Name Alias
+nameSecondary=Name Secondary
+narration=\u09ac\u09b0\u09cd\u09a3\u09a8\u09be
+nickName=\u09a1\u09be\u0995 \u09a8\u09be\u09ae
+nid=\u099c\u09be\u09a4\u09c0\u09af\u09bc \u09aa\u09b0\u09bf\u099a\u09af\u09bc\u09aa\u09a4\u09cd\u09b0
+noOfChild=\u09b8\u09a8\u09cd\u09a4\u09be\u09a8 \u09b8\u0982\u0996\u09cd\u09af\u09be
+notifiedTo=Notified To
+org=Org
+orgUnitType=Org Unit Type
+originatedBy=Originated By
+paramName=Param Name
+paramType=Param Type
+params=Params
+passingYear=Passing Year
+password=\u09aa\u09be\u09b8\u0993\u09af\u09bc\u09be\u09b0\u09cd\u09a1
+payrollArea=Payroll Area
+pct=Pct
+personnelArea=Personnel Area
+personnelSubarea=Personnel Subarea
+phone=\u09a6\u09c1\u09b0\u09be\u09b2\u09be\u09aa\u09a8\u09c0 
+poBox=PO Box
+poCode=PO Code
+position=\u0985\u09ac\u09b8\u09cd\u09a5\u09be\u09a8
+profile=\u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09cd\u09a4
+profileEduDtls=Profile Edu Dtls
+profileJobDtls=Profile Job Dtls
+profilePicFile=\u099b\u09ac\u09bf
+property=Property
+recommendBy=Recommend By
+religion=\u09a7\u09b0\u09cd\u09ae
+remarks=\u09ae\u09a8\u09cd\u09a4\u09ac\u09cd\u09af
+root=Root
+rootHead=Root Head
+sal=\u09ac\u09c7\u09a4\u09a8
+salesGroup=Sales Group
+salesOffice=Sales Office
+slNo=\u09b8\u09bf\u09b0\u09bf\u09df\u09be\u09b2 \u09a8\u0982 
+startDate=\u09b6\u09c1\u09b0\u09c1\u09b0 \u09a4\u09be\u09b0\u09bf\u0996
+state=\u09aa\u09cd\u09b0\u09a6\u09c7\u09b6
+street=\u09b0\u09be\u09b8\u09cd\u09a4\u09be
+submitDate=Submit Date
+submittedBy=Submitted By
+text=Text
+title=\u09b6\u09bf\u09b0\u09cb\u09a8\u09be\u09ae
+user=\u09ac\u09cd\u09af\u09be\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
+username=\u09ac\u09cd\u09af\u09be\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
+value=Value
+valueType=Value Type
+web=Web
+webAddress=\u0997\u0997\u09a8 \u09a0\u09bf\u0995\u09be\u09a8\u09be 
+weight=\u0993\u099c\u09a8
+zip=\u099c\u09bf\u09aa
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
 insertDate=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7 \u09a4\u09be\u09b0\u09bf\u0996
 updateByUser=\u09aa\u09b0\u09bf\u09ac\u09b0\u09cd\u09a4\u09a8\u0995\u09be\u09b0\u09c0
 updateDate=\u09aa\u09b0\u09bf\u09ac\u09b0\u09cd\u09a4\u09a8\u09c7\u09b0 \u09a4\u09be\u09b0\u09bf\u0996
-#####################################from
+
+default.foundRec=\u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u099b\u09c7 {0} \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
@@ -173,3 +296,20 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+#mmm
+Size=Length must be between {2} and {1} characters long
+Size.client.code=Code must be between {2} and {1} characters long
+Size.client.name=Name must be between {2} and {1} characters long
+
+Size.student.firstName=First Name must be between {2} and {1} characters long
+Size.student.lastName=Last Name must be between {2} and {1} characters long
+NotEmpty.student.sex=Please specify your gender
+NotNull.student.dob=Date of birth can not be blank
+Past.student.dob=Date of birth must be in the past
+Email.student.email=Please provide a valid Email address
+NotEmpty.student.email=Email can not be blank
+NotEmpty.student.country=Please select your country
+NotEmpty.student.section=Please select your section
+NotEmpty.student.subjects=Please select at least one subject
+typeMismatch=Invalid format
